{{$NEXT}}

0.38     2017-07-01

- Simplify checks for overloading to not call overload::Overloaded(). Just
  checking the return value of overload::Method() is sufficient.


0.37     2017-05-09

- Possible fix for very weird failures seen under threaded Perls with some
  modules that use Specio.


0.36     2017-02-19

- Inlined coercions would attempt to coerce for every type which matched the
  value given, instead of stopping after the first type. Fixed by Graham Knop
  (GH #11).

- Inlined coercions did not include the inline environment variables needed by
  the type from which the coercion was being performed. Fixed by Graham Knop
  (GH #8).

- When you use the same type repeatedly as coderef (for example, as a
  constraint with Moo), it will only generated its subified form once, rather
  than regenerating it each time it is de-referenced.

- Added an API to Specio::Subs to allow you to combine type libraries and
  helper subs in one package for exporting. See the Specio::Exporter docs for
  more details.


0.35     2017-02-12

- Added Specio::Subs, a module which allows you to turn one or more library's
  types into subroutines like is_Int() and to_Int().

- Added an inline_coercion method to Specio constraints.


0.34     2017-01-29

- Packages with Specio::Exporter as their parent can now specify additional
  arbitrary subs to exporter. See the Specio::Exporter docs for details.

- Importing the same library twice in a given package would throw an
  exception. The second attempt to import is now ignored.

- Added an alpha implementation of structured types. See
  Specio::Library::Structured for details.


0.33     2017-01-24

- Fixed a mistake in the SYNOPSIS for Specio::Declare. The example for the
  *_isa_type helpers was not correct.

- Removed the alpha warning from the docs. This is being used by enough of my
  modules on CPAN that I don't plan on doing any big breaking changes without
  a deprecation first.


0.32     2017-01-12
