@@ -25,18 +25,16 @@ with 'Specio::Constraint::Role::DoesType';
         my $val  = shift;
 
         return sprintf( <<'EOF', ($val) x 3, B::perlstring( $self->role ) );
-(
-    Scalar::Util::blessed( %s )
-    &&
-    %s->can('does')
-    &&
-    %s->does(%s)
-)
+( Scalar::Util::blessed(%s) && %s->can('does') && %s->does(%s) )
 EOF
     };
 
     sub _build_inline_generator {$_inline_generator}
 }
+
+## no critic (Subroutines::ProhibitUnusedPrivateSubroutines)
+sub _allow_classes {0}
+## use critic
 
 __PACKAGE__->_ooify;
 
