@@ -1,5 +1,17 @@
 {{$NEXT}}
 
+- Many bug fixes and improves to the types created by
+  {any,object}_{can,does,isa}_type. In some cases, an invalid value could
+  cause an exception in type check itself. In other cases, a value which
+  failed a type check would cause an exception when generating a message
+  describing the failure. These cases have all been fixed.
+
+- The messages describing a failure for all of these types have been improved.
+
+- You can now create anonymous *_does and *_isa types using the exports from
+  Specio::Declare.
+
+
 0.38     2017-07-01
 
 - Simplify checks for overloading to not call overload::Overloaded(). Just
